<resources>
    <string name="app_name" translatable="false">Mecanic</string>
    <string name="username_label" translatable="false">Username</string>
    <string name="password_label">Password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="appTitle" translatable="false">Mecanic</string>
    <string name="user">Customer</string>
    <string name="montir">Mechanic</string>
    <string name="email_label" translatable="false">Email</string>
    <string name="btn_next">Next</string>
    <string name="alamat">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello,</string>
    <string name="title_activity_homescreen_montir" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pengunjung">Visitors</string>
    <string name="rating">Rating</string>
    <string name="spek">Spesialisation</string>
    <string name="promosi">Promote</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="notif_sumary_sukses">Registration Success</string>
    <string name="pilih_kebutuhan_anda">Choose your account</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="daftarkan_akun_anda_disini">Register your account</string>
    <string name="nama_bengkel">Business\' Name</string>
    <string name="masukan_nama_bengkel">Enter your business name</string>
    <string name="masukan_alamat">Enter your business\' address</string>
    <string name="jam_operasional">Operational Hours</string>
    <string name="jam_buka">Opening Hours</string>
    <string name="jam_tutup">Closing Hours</string>
    <string name="nomor_wa" translatable="false">Whatsapp</string>
    <string name="masukan_nomor_whatsapp">Enter your whatsapp number</string>
    <string name="masukan_e_mail">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="konfirmasi_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="masukan_nama_depan">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="spesialis">Spesialize on </string>
    <string name="sukses_rating">Your rating has been added</string>
    <string name="pesan_wa">Hi! I need your help.</string>
    <string name="add_fav">Adding to fav...</string>
    <string name="please_wait">Please wait</string>
    <string name="selamat_datang_di">Welcome to</string>
    <string name="belum_punya_akun">Do not have an account yet?</string>
    <string name="load_user_info">Load user info...</string>
    <string name="email_error">Invalid email</string>
    <string name="pass_error">Invalid password</string>
    <string name="data_not_found">Data is not found</string>
    <string name="verifikasi_akun">Verify Email</string>
    <string name="akun">Account</string>
    <string name="pilih_bahasa">Choose Language</string>
    <string name="bantuan">Help</string>
    <string name="keluar_akun">Logout</string>
    <string name="motor">Motorcycle</string>
    <string name="mobil">Car</string>
    <string name="beri_penilaian">Rate Mechanic</string>
    <string name="shop">Shop</string>
    <string name="yuk_verifikasi_email_kamu">Please Verify Your Email</string>
    <string name="email_akan_dikirimkan_ke_alamat_email_kamu">Receive a verification email by clicking the button below. We will send a link to your email.</string>
    <string name="kirim">Send Verification Email</string>
    <string name="dari_mecanic">Our Offering</string>
    <string name="servis_yang_diinginkan">Our Service</string>
    <string name="rekomendasi_montir">Our recommendation</string>
    <string name="mau_cari_daerah_apa">Tell us your location</string>
    <string name="pilih_spesialisasi">Choose your speciality</string>
    <string name="notif_sukses">Hooray! Your account has been made. Welcome to Mecanic family.  For the security purpose, please verify your email as soon as possible!</string>
    <string name="lupa_password"><u>Forgot password?</u></string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="updated_data">Your data has been updated</string>
    <string name="we_couldn_t_find_any_mechanic">We couldn\'t find any mechanic</string>
    <string name="you_have_no_any_favorite_yet">You have no any favorite yet</string>
    <string name="verif_email">Welcome back to our app. Seems like you don\'t verif your email yet. Please do a verification as soon as possible on profile menu.</string>
    <string name="lokasi_anda">Your Location</string>
    <string name="email_isverified">Email Terverifikasi</string>
    <string name="desc_verified">Your email has been verified by our system</string>
    <string name="send_verification">Email Verifikasi Telah Dikirimkan</string>
    <string name="desc_sendVerify">Periksa email Anda untuk melakukan verifikasi</string>
    <string name="toast_sendEmail">Email telah dikirim</string>
    <string name="save_newData_pg">Menyimpan perubahan...</string>
    <string name="succes_edit">Yeay! your data has been updated. You could explore more in our app</string>

</resources>