<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistCustomer"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/header3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/appTitle"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:fontFamily="@font/pregular"
                    android:text="@string/daftarkan_akun_anda_disini"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginleft"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/marginleft"
                android:orientation="vertical"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pmedium"
                        android:text="@string/email_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontReg" />

                    <EditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_input"
                        android:fontFamily="@font/pregular"
                        android:hint="@string/masukan_e_mail"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayFont"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pmedium"
                        android:text="@string/password_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontReg" />

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_input"
                        android:fontFamily="@font/pregular"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayFont"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pmedium"
                        android:text="@string/konfirmasi_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontReg" />

                    <EditText
                        android:id="@+id/confirmPassEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_input"
                        android:fontFamily="@font/pregular"
                        android:hint="@string/confirm_your_password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayFont"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pmedium"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontReg" />

                    <EditText
                        android:id="@+id/firstNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_input"
                        android:fontFamily="@font/pregular"
                        android:hint="@string/masukan_nama_depan"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayFont"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pmedium"
                        android:text="@string/nomor_wa"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontReg" />

                    <EditText
                        android:id="@+id/phoneNumEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_input"
                        android:fontFamily="@font/pregular"
                        android:hint="@string/masukan_nomor_whatsapp"
                        android:inputType="phone"
                        android:lines="1"
                        android:paddingLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayFont"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_regist_cust"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_btn_login"
                        android:fontFamily="@font/pmedium"
                        android:text="@string/sign_up_btn"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textSize="@dimen/fontReg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pmedium"
                            android:text="@string/sudah_punya_akun"
                            android:textColor="@color/black"
                            android:textSize="@dimen/fontSmall" />

                        <TextView
                            android:id="@+id/login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/pmedium"
                            android:text="@string/login_btn"
                            android:textColor="@color/mainColor"
                            android:textSize="@dimen/fontSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>